# gitscan

./: README.md  pyproject.toml
.github/workflows/: ci.yml
gitscan/: cli.py
tests/: test_cli.py
